luban的一点小优化